# system-info-service

./: .gitignore  BACKEND_API_IMPROVEMENTS.md  Cargo.toml  DEPLOYMENT.md  ReadMe.md  Rocket.toml  install.sh  system-info.service
scripts/: deploy-hosts.txt.example  deploy.sh  install.sh  update.sh
src/: main.rs  system_wrapper.rs
src/system_wrapper/: handlers.rs  internal.rs  mod.rs  types.rs
